--- a/mysite/myapp/templates/myapp/index.html
+++ b/mysite/myapp/templates/myapp/index.html
@@ -4,18 +4,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Calorie Counter</title>
 </head>
 <body>
-    <form method="POST">
-        {%csrf_token%}
-        <select name="food_consumed" id="food_consumed">
-            {% for food in foods %}
-            <option value="{{food.name}}">{{food.name}}</option>
-            {% endfor %}
-        </select>
-        <button type="submit">Add</button>
-    </form>
-    
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <form method="POST" >
+                <div class="form-group row">
+                {%csrf_token%}
+                <label class="col-md-2">
+                    <b>Select Food Item</b>
+                </label>
+                <select class="col-md-6 form-control" name="food_consumed" id="food_consumed">
+                    {% for food in foods %}
+                    <option value="{{food.name}}">{{food.name}}</option>
+                    {% endfor %}
+                </select>
+                <button class="btn btn-success" type="submit">Add</button>
+            </div>
+            </form>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-8">
+            <div>
+                <h4>Today's Foods</h4>
+            </div>
+            <table id="table" class="table table-striped table-primary">
+                <tr class="bg-primary text-white">
+                    <th>Item</th>
+                    <th>Carbs(gr)</th>
+                    <th>Proteins(gr)</th>
+                    <th>Fats(gr)</th>
+                    <th>Calories(Kcal)</th>
+
+                </tr>
+                {% for c in consumed_food %}
+                <tr>
+                    <td>{{c.food_consumed.name}}</td>
+                    <td>{{c.food_consumed.carbs}}</td>
+                    <td>{{c.food_consumed.protein}}</td>
+                    <td>{{c.food_consumed.fats}}</td>
+                    <td>{{c.food_consumed.calories}}</td>
+                </tr>
+                {% endfor %}
+            </table>
+
+        </div>
+        <div class="col-md-3 offset"></div>
+    </div>
+</div>
 </body>
 </html>
