--- a/mysite/myapp/templates/myapp/index.html
+++ b/mysite/myapp/templates/myapp/index.html
@@ -5,11 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
     <title>Calorie Counter</title>
 </head>
 <body>
+    <!--PROGRESS BAR-->
 <div class="container">
+
     <div class="row">
+        <div class="col-md-12">
+            <nav class="navbar navbar-dark bg-primary">
+                <span class="navbar-brand">Macronutrient Tracker</span>
+            </nav>
+        </div>
+    </div>
+    <br><br><br>
+
+<h4>Calorie Goal</h4> <br>
+
+<div class="row">
+    <div class="col-md-9 offset-1">
+        <div class="progress">
+            <div class="progress-bar bg-success" role="progressbar" style="width:0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="0">
+            
+            </div>
+        </div>
+    </div>
+</div>
+
+  <!--TABLE (Nutritional values)-->
+    <div class="row mt-5">
         <div class="col-md-12">
             <form method="POST" >
                 <div class="form-group row">
@@ -27,9 +52,8 @@
             </form>
         </div>
     </div>
-
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-7">
             <div>
                 <h4>Today's Foods</h4>
             </div>
@@ -51,11 +75,102 @@
                     <td>{{c.food_consumed.calories}}</td>
                 </tr>
                 {% endfor %}
+                <tr>
+                    <td id="name"><b>Total</b></td>
+                    <td id="totalCarbs"><b></b></td>
+                    <td id="totalProteins"><b></b></td>
+                    <td id="totalFats"><b></b></td>
+                    <td id="totalCalories"><b></b></td>
+                </tr>
             </table>
-
         </div>
-        <div class="col-md-3 offset"></div>
+
+        <!--CHART-->
+        <div class="col-md-5 offset">
+            <div>
+                <h4>Today's intake</h4>
+            </div>
+            <div class="card-header text-white bg-primary">
+                <h4>Macronitrients breakdown</h4>
+            </div>
+            <div class="col-md-12">
+                <canvas id="myChart" width="400" height="400"></canvas>
+
+            </div>
+        </div>
     </div>
 </div>
+
 </body>
+<script>
+    var table = document.getElementById("table");
+    var carbs = 0, proteins=0, fats=0, calories=0;
+
+    for(var i=1;i<table.rows.length-1;i++){
+        console.log(table.rows[i].cells[1].innerHTML);
+        carbs += parseFloat(table.rows[i].cells[1].innerHTML);
+        carbs = Math.round(carbs); //round up values to avoid breaking the table results
+        proteins += parseFloat(table.rows[i].cells[2].innerHTML)
+        proteins = Math.round(proteins);
+       fats += parseFloat(table.rows[i].cells[3].innerHTML)
+       fats = Math.round(fats);
+       calories += parseFloat(table.rows[i].cells[4].innerHTML)
+       calories = Math.round(calories);
+    }
+    console.log(fats)
+//get cells where totals will be displayed (use id):
+document.getElementById("totalCarbs").innerHTML = '<b>' + carbs + '(gr) </b>';
+document.getElementById("totalProteins").innerHTML = '<b>' + proteins + '(gr) </b>';
+document.getElementById("totalFats").innerHTML = '<b>' + fats + '(gr) </b>';
+document.getElementById("totalCalories").innerHTML = '<b>' + calories + '(gr) </b>';
+
+//Calculates proportions for progress bar
+var calPer = (calories/2000) * 100;
+document.getElementsByClassName("progress-bar")[0].setAttribute("style","width:"+calPer+"%");
+
+//CHART CODE
+var ctx = document.getElementById('myChart').getContext('2d'); //gives me access to the canvas
+var myChart = new Chart(ctx, {
+    type: 'doughnut',
+    data: {
+        labels: ['Carbs', 'Protein', 'Fats'],
+        datasets: [{
+            label: 'Macronutrients',
+            data: [12, 19, 3],
+            backgroundColor: [
+                'rgba(255, 99, 132, 0.2)',
+                'rgba(54, 162, 235, 0.2)',
+                'rgba(255, 206, 86, 0.2)',
+                'rgba(75, 192, 192, 0.2)',
+                'rgba(153, 102, 255, 0.2)',
+                'rgba(255, 159, 64, 0.2)'
+            ],
+            borderColor: [
+                'rgba(255, 99, 132, 1)',
+                'rgba(54, 162, 235, 1)',
+                'rgba(255, 206, 86, 1)',
+                'rgba(75, 192, 192, 1)',
+                'rgba(153, 102, 255, 1)',
+                'rgba(255, 159, 64, 1)'
+            ],
+            borderWidth: 1
+        }]
+    },
+    options: {
+        scales: {
+            yAxes: [{
+                ticks: {
+                    beginAtZero: true
+                }
+            }]
+        }
+    }
+});
+
+
+
+
+
+</script>
+
 </html>
