--- a/mysite/myapp/templates/myapp/index.html
+++ b/mysite/myapp/templates/myapp/index.html
@@ -1,25 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
-    <title>Calorie Counter</title>
-</head>
-<body>
-    <!--PROGRESS BAR-->
-<div class="container">
+{% extends './base.html' %}
+{% load static %}
+{% block body %}
 
-    <div class="row">
-        <div class="col-md-12">
-            <nav class="navbar navbar-dark bg-primary">
-                <span class="navbar-brand">Macronutrient Tracker</span>
-            </nav>
-        </div>
-    </div>
-    <br><br><br>
 
 <h4>Calorie Goal</h4> <br>
 
@@ -47,7 +29,7 @@
                     <option value="{{food.name}}">{{food.name}}</option>
                     {% endfor %}
                 </select>
-                <button class="btn btn-success" type="submit">Add</button>
+                <button class="btn btn-success m-2" type="submit">Add</button>
             </div>
             </form>
         </div>
@@ -95,7 +77,7 @@
                 <h4>Today's intake</h4>
             </div>
             <div class="card-header text-white bg-primary">
-                <h4>Macronitrients breakdown</h4>
+                <h4>Macronutrients breakdown</h4>
             </div>
             <div class="col-md-12">
                 <canvas id="myChart" width="400" height="400"></canvas>
@@ -106,67 +88,69 @@
 </div>
 
 </body>
+{% endblock %}
+
+{% block script %}
 <script>
     var table = document.getElementById("table");
-    var carbs = 0, proteins=0, fats=0, calories=0;
+    var carbs = 0, proteins = 0, fats = 0, calories = 0;
 
-    for(var i=1;i<table.rows.length-1;i++){
+    for (var i = 1; i < table.rows.length - 1; i++) {
         console.log(table.rows[i].cells[1].innerHTML);
         carbs += parseFloat(table.rows[i].cells[1].innerHTML);
-        carbs = Math.round(carbs); //round up values to avoid breaking the table results
-        proteins += parseFloat(table.rows[i].cells[2].innerHTML)
-        proteins = Math.round(proteins);
-       fats += parseFloat(table.rows[i].cells[3].innerHTML)
-       fats = Math.round(fats);
-       calories += parseFloat(table.rows[i].cells[4].innerHTML)
-       calories = Math.round(calories);
+        proteins += parseFloat(table.rows[i].cells[2].innerHTML);
+        fats += parseFloat(table.rows[i].cells[3].innerHTML);
+        calories += parseFloat(table.rows[i].cells[4].innerHTML);
     }
-    console.log(fats)
-//get cells where totals will be displayed (use id):
-document.getElementById("totalCarbs").innerHTML = '<b>' + carbs + '(gr) </b>';
-document.getElementById("totalProteins").innerHTML = '<b>' + proteins + '(gr) </b>';
-document.getElementById("totalFats").innerHTML = '<b>' + fats + '(gr) </b>';
-document.getElementById("totalCalories").innerHTML = '<b>' + calories + '(gr) </b>';
 
-//Calculates proportions for progress bar
-var calPer = (calories/2000) * 100;
-document.getElementsByClassName("progress-bar")[0].setAttribute("style","width:"+calPer+"%");
+    // Round nutrient totals after the loop
+    carbs = Math.round(carbs);
+    proteins = Math.round(proteins);
+    fats = Math.round(fats);
+    calories = Math.round(calories);
 
+    console.log(fats);
 
-//percentages to be used in chart
-var total = carbs+proteins+fats;
-var carbsP=Math.round((carbs/total) *100);
-var proteinsP=Math.round((proteins/total) *100);
-var fatsP=Math.round((fats/total) *100);
+    // Get cells where totals will be displayed (use id):
+    document.getElementById("totalCarbs").innerHTML = '<b>' + carbs + '(gr) </b>';
+    document.getElementById("totalProteins").innerHTML = '<b>' + proteins + '(gr) </b>';
+    document.getElementById("totalFats").innerHTML = '<b>' + fats + '(gr) </b>';
+    document.getElementById("totalCalories").innerHTML = '<b>' + calories + '(Kcal) </b>';
 
-//CHART CODE
-var ctx = document.getElementById('myChart').getContext('2d'); //gives me access to the canvas
-var myChart = new Chart(ctx, {
-    type: 'doughnut',
-    data: {
-        labels: ['Carbs ' +carbsP+'%', 'Protein ' +proteinsP+'%', 'Fats ' +fatsP+'%'],
-        datasets: [{
-            label: 'Macronutrients',
-            data: [carbsP, proteinsP, fatsP],
-            backgroundColor: [
-                'rgba(255, 99, 132, 1)',
-                'rgba(54, 162, 235, 1)',
-                'rgba(255, 206, 86, 1)',
-            ],
-            borderColor: [
-                'rgba(255, 99, 132, 1)',
-                'rgba(54, 162, 235, 1)',
-                'rgba(255, 206, 86, 1)',
-            ],
-            borderWidth: 1
-        }]
-    },
-});
+    // Calculates proportions for the progress bar
+    var calPer = (calories / 2000) * 100;
+    document.getElementsByClassName("progress-bar")[0].setAttribute("style", "width:" + calPer + "%");
 
+    // Percentages to be used in the chart
+    var total = carbs + proteins + fats;
+    var carbsP = Math.round((carbs / total) * 100);
+    var proteinsP = Math.round((proteins / total) * 100);
+    var fatsP = Math.round((fats / total) * 100);
 
-
-
-
+    // CHART CODE
+    var ctx = document.getElementById('myChart').getContext('2d'); // Gives me access to the canvas
+    var myChart = new Chart(ctx, {
+        type: 'doughnut',
+        data: {
+            labels: ['Carbs ' + carbsP + '%', 'Protein ' + proteinsP + '%', 'Fats ' + fatsP + '%'],
+            datasets: [{
+                label: 'Macronutrients',
+                data: [carbsP, proteinsP, fatsP],
+                backgroundColor: [
+                    'rgba(255, 99, 132, 1)',
+                    'rgba(54, 162, 235, 1)',
+                    'rgba(255, 206, 86, 1)',
+                ],
+                borderColor: [
+                    'rgba(255, 99, 132, 1)',
+                    'rgba(54, 162, 235, 1)',
+                    'rgba(255, 206, 86, 1)',
+                ],
+                borderWidth: 1
+            }]
+        },
+    });
 </script>
+{% endblock %}
 
 </html>
