--- a/mysite/myapp/templates/myapp/index.html
+++ b/mysite/myapp/templates/myapp/index.html
@@ -91,6 +91,8 @@
 {% endblock %}
 
 {% block script %}
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 <script>
     var table = document.getElementById("table");
     var carbs = 0, proteins = 0, fats = 0, calories = 0;
