--- a/mysite/myapp/templates/myapp/navbar.html
+++ b/mysite/myapp/templates/myapp/navbar.html
@@ -10,8 +10,8 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         <a class="nav-link" href="#">Track my Macros</a>
      
-        <a class="nav-link" href="#">Login</a>
-        <a class="nav-link" href="#">Logout</a>
+        <a class="nav-link" href="{% url 'login_user' %}">Login</a>
+        <a class="nav-link" href="{% url 'logout_user' %}">Logout</a>
         <a class="nav-link" href="{% url 'signup' %}">Sign up!</a>
 
 
