--- a/mysite/myapp/templates/myapp/login.html
+++ b/mysite/myapp/templates/myapp/login.html
@@ -4,7 +4,7 @@
 
 <div class="col-md-6 offset-md-3">
     <h1>Login</h1>
-    <form method="POST" action="{% url 'login_user' %}">
+    <form method="POST" action="{% url 'login' %}">
         {% csrf_token %}
         <div class="mb-3">
           <input type="text" class="form-control" name="username" placeholder="Enter your username">
@@ -14,6 +14,7 @@
         </div>
         <button type="submit" class="btn btn-outline-success">Submit</button>
     </form>
+
 </div>
 
 {% endblock %}
