--- a/mysite/myapp/templates/myapp/navbar.html
+++ b/mysite/myapp/templates/myapp/navbar.html
@@ -1,21 +1,19 @@
 {% load static %}
 
-<nav class="navbar navbar-dark bg-primary navbar-expand-lg">
-    <a class="navbar-brand" href="#">Macro Tracker</a>
+<nav class="navbar navbar-dark bg-primary navbar-expand-lg navbar-custom">
+    <a class="navbar-brand" href="#">MACROMATE</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-link" href="#">Track my Macros</a>
-     
-        <a class="nav-link" href="{% url 'login_user' %}">Login</a>
-        <a class="nav-link" href="{% url 'logout_user' %}">Logout</a>
-        <a class="nav-link" href="{% url 'signup' %}">Sign up!</a>
 
-
-        
+        {% if user.is_authenticated %}
+        <a class="nav-link active" href="{% url 'logout' %}">Logout</a>
+        {% else %}
+        <a class="nav-link active" href="{% url 'login' %}">Login</a>
+        <a class="nav-link active" href="{% url 'signup' %}">Sign up!</a>
+        {% endif %}
         
       </div>
     </div>
